fixed z-index for yo button

--- a/app/assets/stylesheets/smallScreens.less
+++ b/app/assets/stylesheets/smallScreens.less
@@ -27,6 +27,7 @@
     position: fixed;
     top: 40px;
     right: 16px;
+    z-index: 9001; /* Yep, its OVER NONETHOUSAND! */
     .yo-open {
       right: 0px;
       border: 1px solid black;
